--- a/projeto_programacaoparadados_fase01.ipynb
+++ b/projeto_programacaoparadados_fase01.ipynb
@@ -1,8 +1,24 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "7aa9fdd4-4429-40f8-9c89-232044fec247",
+   "metadata": {},
+   "source": [
+    "# Programação para Dados"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5f501db6-591b-488e-97c0-edb9ea553510",
+   "metadata": {},
+   "source": [
+    "## Fase 1"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 183,
+   "execution_count": 45,
    "id": "67be18a1-9c4e-49c9-a05f-8bc01e32f7c3",
    "metadata": {},
    "outputs": [],
@@ -40,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 189,
+   "execution_count": 46,
    "id": "aa4e7b80-ca67-4efe-89d6-99e1da5602ef",
    "metadata": {
     "scrolled": true
@@ -49,12 +65,12 @@
    "source": [
     "reader = Reader('steam_games.csv')\n",
     "df_price = reader.readColumn([\"AppID\", \"Price\"])\n",
-    "# print(df_price)"
+    "#print(df_price)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 232,
+   "execution_count": 47,
    "id": "26090ae4-bfbd-4da6-af86-d821c9c240ba",
    "metadata": {},
    "outputs": [
@@ -64,7 +80,7 @@
        "'Até maio de 2023 a Steam tinha 72934 jogos, onde 17.39% são jogos gratuitos e 82.61% são jogos pagos.'"
       ]
      },
-     "execution_count": 232,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -101,11 +117,96 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 48,
+   "id": "7bd163af-4f78-4bdf-98f5-099fca000820",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "reader = Reader('steam_games.csv')\n",
+    "df_date = reader.readColumn(['Release date'])\n",
+    "# print(df_date)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "id": "948245c5-b6f0-4df1-a172-1f4c691d4a34",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{2008: 166, 2017: 6182, 2021: 12308, 2020: 9474, 2022: 13961, 2014: 1591, 2019: 7616, 2016: 4312, 2018: 7854, 2010: 297, 2015: 2620, 2013: 483, 2011: 281, 2007: 102, 2012: 350, 2006: 69, 2009: 329, 2003: 3, 2005: 7, 2004: 7, 2002: 1, 1999: 3, 1997: 2, 2001: 4, 2000: 2, 1998: 1, 2023: 4908, 2025: 1}\n"
+     ]
+    }
+   ],
+   "source": [
+    "## faz um for em cada item da lista do df_date, pegando os ultimos 4 numeros e colocando dentro da lista ano e convertendo para int\n",
+    "ano = []  \n",
+    "for data in df_date: \n",
+    "    ano.append(int(data[0][-4:]))\n",
+    "\n",
+    "\n",
+    "## contagem dos anos\n",
+    "contagem = {}\n",
+    "for item in ano:\n",
+    "    if item in contagem:\n",
+    "        contagem[item] += 1\n",
+    "    else:\n",
+    "        contagem[item] = 1\n",
+    "print(contagem)\n",
+    "\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
    "id": "e79456d0-2f22-474f-a943-421e0a18a459",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "reader = Reader('steam_games.csv')\n",
+    "df_sistemas = reader.readColumn(['Windows', 'Mac', 'Linux'])\n",
+    "# print(df_sistemas)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "id": "80f4ec89-54ed-48ba-880d-40fdd5f2c709",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "72908\n",
+      "14700\n",
+      "10076\n"
+     ]
+    }
+   ],
+   "source": [
+    "windows = 0\n",
+    "mac = 0\n",
+    "linux = 0\n",
+    "\n",
+    "\n",
+    "for item in df_sistemas:\n",
+    "    if item[0] == 'True':\n",
+    "        windows += 1\n",
+    "    if item[1] == 'True':\n",
+    "        mac += 1\n",
+    "    if item[2] == 'True':\n",
+    "        linux += 1\n",
+    "\n",
+    "print(windows)\n",
+    "print(mac)\n",
+    "print(linux)"
+   ]
   }
  ],
  "metadata": {
