Tratamento de exceções

--- a/projeto_programacaoparadados_fase01.ipynb
+++ b/projeto_programacaoparadados_fase01.ipynb
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 1,
    "id": "c4a80076-f1a8-4dfa-882a-54b6f51df578",
    "metadata": {},
    "outputs": [],
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 3,
    "id": "67be18a1-9c4e-49c9-a05f-8bc01e32f7c3",
    "metadata": {},
    "outputs": [],
@@ -68,33 +68,43 @@
     "        self.column_mapping = {}\n",
     "\n",
     "    def readColumn(self, columns=None, random_sample=False):\n",
-    "        with open(self.filename, 'r', encoding='utf-8') as arquivo:\n",
-    "            reader = csv.reader(arquivo, delimiter=',')\n",
-    "            headers = next(reader) # ler a primeira linha do arquivo e armazenar seus valores na variável headers (cabeçalho)\n",
-    "            data = [] # lista vazia para armazenar os dados \n",
-    "           \n",
-    "\n",
-    "            if columns: \n",
-    "                self._map_columns(headers)\n",
-    "                selected_columns = [self.column_mapping[col] for col in columns]\n",
-    "                \n",
-    "            else:\n",
-    "                selected_columns = range(len(headers))\n",
-    "                \n",
-    "            if random_sample: \n",
-    "                rows = list(reader)\n",
-    "                random_rows = random.sample(rows, 20)\n",
-    "                for row in random_rows:\n",
-    "                    selected_data = [row[i] for i in selected_columns]\n",
-    "                    data.append(selected_data)\n",
-    "            else:\n",
-    "                for row in reader:  ## selecionar cada linha do arquivo e insere na lista da variável data\n",
-    "                    selected_data = [row[i] for i in selected_columns]\n",
-    "                    data.append(selected_data) \n",
-    "            return data\n",
+    "        try: \n",
+    "            \n",
+    "            with open(self.filename, 'r', encoding='utf-8') as arquivo:\n",
+    "                reader = csv.reader(arquivo, delimiter=',')\n",
+    "                headers = next(reader) # ler a primeira linha do arquivo e armazenar seus valores na variável headers (cabeçalho)\n",
+    "                data = [] # lista vazia para armazenar os dados \n",
+    "               \n",
+    "    \n",
+    "                if columns: \n",
+    "                    self._map_columns(headers)\n",
+    "                    selected_columns = [self.column_mapping[col] for col in columns]\n",
+    "                    \n",
+    "                else:\n",
+    "                    selected_columns = range(len(headers))\n",
+    "                    \n",
+    "                if random_sample: \n",
+    "                    rows = list(reader)\n",
+    "                    random_rows = random.sample(rows, 20)\n",
+    "                    for row in random_rows:\n",
+    "                        selected_data = [row[i] for i in selected_columns]\n",
+    "                        data.append(selected_data)\n",
+    "                else:\n",
+    "                    for row in reader:  ## selecionar cada linha do arquivo e insere na lista da variável data\n",
+    "                        selected_data = [row[i] for i in selected_columns]\n",
+    "                        data.append(selected_data) \n",
+    "                return data\n",
+    "            \n",
+    "        except Exception as e:\n",
+    "            print(f\"Ocorreu um erro: {e}.\")\n",
     "            \n",
     "    def _map_columns(self, headers):  # mapear os cabeçalhos das colunas para seus índices correspondentes\n",
-    "        self.column_mapping = {col: idx for idx, col in enumerate(headers)}"
+    "        try:\n",
+    "            \n",
+    "            self.column_mapping = {col: idx for idx, col in enumerate(headers)}\n",
+    "            \n",
+    "        except Exception as e:\n",
+    "            print(f\"Ocorreu um erro: {e}.\")"
    ]
   },
   {
@@ -107,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 4,
    "id": "aa4e7b80-ca67-4efe-89d6-99e1da5602ef",
    "metadata": {
     "scrolled": true
@@ -130,16 +140,14 @@
   {
    "cell_type": "markdown",
    "id": "bcea79c4-6bc9-4076-9aaa-acc70ecd65c5",
-   "metadata": {
-    "jp-MarkdownHeadingCollapsed": true
-   },
+   "metadata": {},
    "source": [
     "#### 1.2.1 Seleção das colunas"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 5,
    "id": "37a9a0a4-31f0-4f82-9ea2-8e04f0eba50f",
    "metadata": {},
    "outputs": [],
@@ -150,16 +158,14 @@
   {
    "cell_type": "markdown",
    "id": "120f3987-0f3c-42a7-9228-54e027d756c6",
-   "metadata": {
-    "jp-MarkdownHeadingCollapsed": true
-   },
+   "metadata": {},
    "source": [
     "#### 1.2.2 Desenvolvimento"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 6,
    "id": "26090ae4-bfbd-4da6-af86-d821c9c240ba",
    "metadata": {},
    "outputs": [],
@@ -172,21 +178,31 @@
     "        self.totalGratuitos = 0  \n",
     "        \n",
     "    def calcularJogos(self):\n",
-    "        for item in self.data:\n",
-    "            if item[1] == \"0.0\":\n",
-    "                self.totalGratuitos += 1\n",
-    "            else:\n",
-    "                self.totalPagos += 1\n",
-    "                \n",
-    "        self.totalJogos = self.totalGratuitos + self.totalPagos\n",
-    "        return self.totalGratuitos, self.totalPagos, self.totalJogos\n",
+    "        try:\n",
+    "            \n",
+    "            for item in self.data:\n",
+    "                if item[1] == \"0.0\":\n",
+    "                    self.totalGratuitos += 1\n",
+    "                else:\n",
+    "                    self.totalPagos += 1\n",
+    "                    \n",
+    "            self.totalJogos = self.totalGratuitos + self.totalPagos\n",
+    "            return self.totalGratuitos, self.totalPagos, self.totalJogos\n",
+    "            \n",
+    "        except Exception as e:\n",
+    "            print(f\"Ocorreu um erro: {e}.\")\n",
     "\n",
     "    def porcentagem(self):\n",
-    "        self.porcentagemPagos = self.totalPagos/self.totalJogos * 100\n",
-    "        self.porcentagemGratuitos = self.totalGratuitos/self.totalJogos * 100\n",
+    "        try:\n",
+    "            \n",
+    "            self.porcentagemPagos = self.totalPagos/self.totalJogos * 100\n",
+    "            self.porcentagemGratuitos = self.totalGratuitos/self.totalJogos * 100\n",
+    "            \n",
+    "            return f'Até maio de 2023 a Steam tinha {self.totalJogos} jogos, onde {self.porcentagemGratuitos:.2f}% são jogos gratuitos e {self.porcentagemPagos:.2f}% são jogos pagos.'     \n",
     "        \n",
-    "        return f'Até maio de 2023 a Steam tinha {self.totalJogos} jogos, onde {self.porcentagemGratuitos:.2f}% são jogos gratuitos e {self.porcentagemPagos:.2f}% são jogos pagos.'     \n",
-    "\n",
+    "        except Exception as e:\n",
+    "            print(f\"Ocorreu um erro: {e}.\")\n",
+    "            \n",
     "    def totalGratuitosPagos(self):\n",
     "        self.calcularJogos()\n",
     "        self.porcentagem()\n",
@@ -197,16 +213,14 @@
   {
    "cell_type": "markdown",
    "id": "f708a969-8c94-4aec-ae4c-5904a649cef9",
-   "metadata": {
-    "jp-MarkdownHeadingCollapsed": true
-   },
+   "metadata": {},
    "source": [
     "#### 1.2.3 Resposta"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 7,
    "id": "4463ccf5-c11e-42b0-a784-f29e337f7c14",
    "metadata": {},
    "outputs": [
@@ -216,7 +230,7 @@
        "'Até maio de 2023 a Steam tinha 72934 jogos, onde 17.39% são jogos gratuitos e 82.61% são jogos pagos.'"
       ]
      },
-     "execution_count": 119,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -238,16 +252,14 @@
   {
    "cell_type": "markdown",
    "id": "409b8ece-8de9-41ef-aacf-63a627dc0c72",
-   "metadata": {
-    "jp-MarkdownHeadingCollapsed": true
-   },
+   "metadata": {},
    "source": [
     "#### 1.3.1 Seleção de colunas"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 8,
    "id": "7bd163af-4f78-4bdf-98f5-099fca000820",
    "metadata": {},
    "outputs": [],
@@ -258,16 +270,14 @@
   {
    "cell_type": "markdown",
    "id": "4a5ea598-b99a-4e6c-8621-e7bb79be1322",
-   "metadata": {
-    "jp-MarkdownHeadingCollapsed": true
-   },
+   "metadata": {},
    "source": [
     "#### 1.3.2 Desenvolvimento"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 9,
    "id": "bfa10f18-4099-48dc-8742-953c2b743480",
    "metadata": {},
    "outputs": [],
@@ -277,28 +287,43 @@
     "        self.data = data\n",
     "        \n",
     "    def listaAnos(self):\n",
-    "        self.ano = []  \n",
-    "        for item in self.data: \n",
-    "            self.ano.append(int(item[0][-4:]))\n",
-    "        return self.ano\n",
+    "        try:\n",
+    "            \n",
+    "            self.ano = []  \n",
+    "            for item in self.data: \n",
+    "                self.ano.append(int(item[0][-4:]))\n",
+    "            return self.ano\n",
+    "        \n",
+    "        except Exception as e:\n",
+    "            print(f\"Ocorreu um erro: {e}.\")\n",
     "  \n",
     "    def contagem(self):\n",
-    "        self.contagem = {}\n",
-    "        for item in self.ano:\n",
-    "            if item in self.contagem:\n",
-    "                self.contagem[item] += 1\n",
-    "            else:\n",
-    "                self.contagem[item] = 1\n",
-    "        return self.contagem\n",
+    "        try:\n",
+    "            \n",
+    "            self.contagem = {}\n",
+    "            for item in self.ano:\n",
+    "                if item in self.contagem:\n",
+    "                    self.contagem[item] += 1\n",
+    "                else:\n",
+    "                    self.contagem[item] = 1\n",
+    "            return self.contagem\n",
+    "            \n",
+    "        except Exception as e:\n",
+    "            print(f\"Ocorreu um erro: {e}.\")\n",
     "\n",
     "    def empate(self):\n",
-    "        self.dic_ordenado = sorted(self.contagem.items(), key=lambda item: item[1], reverse=True)\n",
-    "        self.dois_primeiros = self.dic_ordenado[:2]\n",
-    "        if self.dois_primeiros[0][1] == self.dois_primeiros[1][1]:\n",
-    "            return f\"Com {self.dois_primeiros[0][1]} jogos, {self.dois_primeiros[0][0]} e {self.dois_primeiros[1][0]} empataram e foram os anos com o maior número de novos jogos.\"\n",
-    "        else:\n",
-    "            return f\"Com um total de {self.dois_primeiros[0][1]} jogos, {self.dois_primeiros[0][0]} foi o ano com o maior número de novos jogos.\"\n",
-    "\n",
+    "        try:\n",
+    "            \n",
+    "            self.dic_ordenado = sorted(self.contagem.items(), key=lambda item: item[1], reverse=True)\n",
+    "            self.dois_primeiros = self.dic_ordenado[:2]\n",
+    "            if self.dois_primeiros[0][1] == self.dois_primeiros[1][1]:\n",
+    "                return f\"Com {self.dois_primeiros[0][1]} jogos, {self.dois_primeiros[0][0]} e {self.dois_primeiros[1][0]} empataram e foram os anos com o maior número de novos jogos.\"\n",
+    "            else:\n",
+    "                return f\"Com um total de {self.dois_primeiros[0][1]} jogos, {self.dois_primeiros[0][0]} foi o ano com o maior número de novos jogos.\"\n",
+    "        \n",
+    "        except Exception as e:\n",
+    "            print(f\"Ocorreu um erro: {e}.\")\n",
+    "            \n",
     "    def anoMaiorFrequencia(self):\n",
     "        self.listaAnos()\n",
     "        self.contagem()\n",
@@ -309,16 +334,14 @@
   {
    "cell_type": "markdown",
    "id": "cffdc482-c13a-4e3c-8f3a-4e6496c318b7",
-   "metadata": {
-    "jp-MarkdownHeadingCollapsed": true
-   },
+   "metadata": {},
    "source": [
     "#### 1.3.3 Resposta"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 10,
    "id": "a7f14a56-9698-43f7-9f3f-95a16b40ab56",
    "metadata": {},
    "outputs": [
@@ -328,7 +351,7 @@
        "'Com um total de 13961 jogos, 2022 foi o ano com o maior número de novos jogos.'"
       ]
      },
-     "execution_count": 102,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -350,16 +373,14 @@
   {
    "cell_type": "markdown",
    "id": "bb555340-f3f3-4f3d-b9ce-404d0c27fb66",
-   "metadata": {
-    "jp-MarkdownHeadingCollapsed": true
-   },
+   "metadata": {},
    "source": [
     "#### 1.4.1 Seleção das colunas"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 11,
    "id": "82d9b4b0-1450-423a-89ab-0d04634d6dc5",
    "metadata": {},
    "outputs": [],
@@ -370,16 +391,14 @@
   {
    "cell_type": "markdown",
    "id": "39e0fb86-2b67-4bed-a92c-f9563b0227fc",
-   "metadata": {
-    "jp-MarkdownHeadingCollapsed": true
-   },
+   "metadata": {},
    "source": [
     "#### 1.4.2 Desenvolvimento"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 12,
    "id": "98a5f331-1cc0-4eb7-8a95-0f42bf952587",
    "metadata": {},
    "outputs": [],
@@ -389,23 +408,38 @@
     "        self.data = data\n",
     "\n",
     "    def recommendations_mac(self):\n",
-    "        self.recommendations_mac_int = []\n",
-    "        for item in self.data: \n",
-    "            if item[1] == 'True':\n",
-    "                self.recommendations_mac_int.append([int(item[0]), item[1], item[2]])\n",
-    "        self.recommendations_mac_int.sort(reverse=True)\n",
-    "        return self.recommendations_mac_int\n",
+    "        try: \n",
+    "            \n",
+    "            self.recommendations_mac_int = []\n",
+    "            for item in self.data: \n",
+    "                if item[1] == 'True':\n",
+    "                    self.recommendations_mac_int.append([int(item[0]), item[1], item[2]])\n",
+    "            self.recommendations_mac_int.sort(reverse=True)\n",
+    "            return self.recommendations_mac_int\n",
+    "\n",
+    "        except Exception as e:\n",
+    "            print(f\"Ocorreu um erro: {e}.\")\n",
     "\n",
     "    def first_3(self):\n",
-    "        self.first_3 = self.recommendations_mac_int[:3]\n",
-    "        return self.first_3\n",
+    "        try:\n",
+    "            \n",
+    "            self.first_3 = self.recommendations_mac_int[:3]\n",
+    "            return self.first_3\n",
+    "            \n",
+    "        except Exception as e:\n",
+    "            print(f\"Ocorreu um erro: {e}.\")\n",
     "\n",
     "    def names(self):\n",
-    "        self.names_lista = []\n",
-    "        for item in self.first_3:\n",
-    "            self.names_lista.append(item[2])\n",
-    "        return f'Os jogos {self.names_lista[0]}, {self.names_lista[1]} e {self.names_lista[2]} são as 3 melhores recomendações compatíveis com o sistema Mac.'\n",
-    "\n",
+    "        try: \n",
+    "            \n",
+    "            self.names_lista = []\n",
+    "            for item in self.first_3:\n",
+    "                self.names_lista.append(item[2])\n",
+    "            return f'Os jogos {self.names_lista[0]}, {self.names_lista[1]} e {self.names_lista[2]} são as 3 melhores recomendações compatíveis com o sistema Mac.'\n",
+    "       \n",
+    "        except Exception as e:\n",
+    "            print(f\"Ocorreu um erro: {e}.\")\n",
+    "    \n",
     "    def recommendations_mac_3(self):\n",
     "        self.recommendations_mac()\n",
     "        self.first_3()\n",
@@ -424,7 +458,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 13,
    "id": "aa96f4c9-435a-48a3-b842-ece5980b0966",
    "metadata": {},
    "outputs": [
@@ -434,7 +468,7 @@
        "\"Os jogos Counter-Strike: Global Offensive, Terraria e Garry's Mod são as 3 melhores recomendações compatíveis com o sistema Mac.\""
       ]
      },
-     "execution_count": 105,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -446,7 +480,9 @@
   {
    "cell_type": "markdown",
    "id": "d8861116-c2a3-4572-88dd-43f2d9e9bb1c",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
     "## 2. Análise sobre 20 dados aleatórios do banco"
    ]
@@ -454,9 +490,7 @@
   {
    "cell_type": "markdown",
    "id": "3d1c3379-9283-4491-bcf0-c1c828b6ec50",
-   "metadata": {
-    "jp-MarkdownHeadingCollapsed": true
-   },
+   "metadata": {},
    "source": [
     "### 2.1 Arquivo CSV "
    ]
@@ -464,9 +498,7 @@
   {
    "cell_type": "markdown",
    "id": "971e7a27-f424-4e11-99b7-961cb447c79e",
-   "metadata": {
-    "jp-MarkdownHeadingCollapsed": true
-   },
+   "metadata": {},
    "source": [
     "#### 2.1.1 Lista com 20 dados aleatórios"
    ]
@@ -537,9 +569,7 @@
   {
    "cell_type": "markdown",
    "id": "ecff6301-6926-4f39-9a5f-21708bb93acb",
-   "metadata": {
-    "jp-MarkdownHeadingCollapsed": true
-   },
+   "metadata": {},
    "source": [
     "### 2.3 Qual o percentual de jogos gratuitos e pagos na plataforma? "
    ]
@@ -594,9 +624,7 @@
   {
    "cell_type": "markdown",
    "id": "1f21f383-90a3-4310-a2e7-009a230cb897",
-   "metadata": {
-    "jp-MarkdownHeadingCollapsed": true
-   },
+   "metadata": {},
    "source": [
     "### 2.4 Qual o ano com o maior número de novos jogos? Em caso de empate, retorne uma lista com os anos empatados."
    ]
@@ -651,9 +679,7 @@
   {
    "cell_type": "markdown",
    "id": "83741bac-ce13-4474-a5b1-3702722260a0",
-   "metadata": {
-    "jp-MarkdownHeadingCollapsed": true
-   },
+   "metadata": {},
    "source": [
     "### 2.5 Quais são os 3 jogos com as melhores recomendações e que são compatíveis com o sistema Mac?"
    ]
